--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the api/session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.nav-greeting {
+  a {
+    text-decoration: none;
+    padding: 30px;
+  }
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  h1 {
+    display: inline-block;
+    font-size: 3em;
+    margin: auto 0;
+  }
+}
