--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -21,12 +21,13 @@
     margin: 35px;
     color: #fff;
     border-radius: 5px;
+    border: 1px solid #2aadad;
     background-color: #2aadad;
-    border: 1px solid #1faeae;
   }
 
   button:hover {
     background-color: #2b9292;
+    border: 1px solid #2b9292;
   }
 }
 
