--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <% if logged_in? %>
+      <script>
+      window.currentUser = {
+        "id": "<%= current_user.id %>",
+        "username": "<%= current_user.username %>"
+      }
+     </script>
+    <% end %>
   </head>
 
   <body>
