--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -32,16 +32,134 @@
   }
 }
 
-header {
-  background-color: #333;
+.nav-logo {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 35px;
+  color: #fafafa;
+
+}
+.nav-logo-img {
+  background-image: image_url("brain_hacking.png");
+  height: 53px;
+  width: 53px;
+  background-size: cover;
+}
+
+header {
+  background-color: #272829;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3px 35px;
 
   h1 {
     color: #fafafa;
     font-size: 2em;
-    margin: 0 35px;
+    margin: 0 20px;
   }
+}
+.login-page-header {
+  margin-left: 3vh;
+  color: #c3c3c3;
+
+  h1 {
+    font-size: 2.6em;
+  }
+
+  p {
+    margin-left: 2vh;
+  }
+
+}
+
+.login-page {
+  display: flex;
+  justify-content: space-between;
+  background-image: image_url("splash_img.jpg");
+  background-size: cover;
+  height: calc(100vh - 59px);
+  width: 100vw;
+  color: #eaeaea;
+
+
+  .login-form-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    height: 70vh;
+    width: 100%;
+    margin-top: 70px;
+
+    form {
+      align-self: center;
+      margin-bottom: 25vh;
+      background-color: #272829;
+      color: #c3c3c3;
+      padding: 20px;
+      border-radius: 5px;
+    }
+    .login-input {
+      font-size: 18px;
+      color: #c3c3c3;
+      border-radius: 5px;
+      border: 1px solid rgba(0, 0, 0, 0.65);
+      display: block;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.65);
+
+      vertical-align: middle;
+      -webkit-transform: perspective(1px) translateZ(0);
+      transform: perspective(1px) translateZ(0);
+      box-shadow: 0 0 1px transparent;
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-property: box-shadow;
+      transition-property: box-shadow;
+      width: 7.32em;
+      height: 20px;
+    }
+    .login-input:focus,
+    .login-input:active {
+      box-shadow: 0 0 8px #2b9292;
+      outline: none;
+    }
+
+    input[type="submit"] {
+      cursor: pointer;
+      color: #c3c3c3;
+      font-size: 18px;
+      border-radius: 5px;
+      background-color: #2b9292;
+      border: 1px solid #2b9292;
+      -webkit-transition-duration: 0.2s;
+      transition-duration: 0.2s;
+    }
+    input[type="submit"]:hover,
+    input[type="submit"]:focus
+    input[type="submit"]:active {
+      background-color: #1c6161;
+      border: 1px solid #1c6161;
+    }
+
+    a {
+      color: #c3c3c3;
+    }
+    a:hover {
+      color: #2aadad;
+    }
+  }
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #c3c3c3;
+    opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #c3c3c3;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #c3c3c3;
 }
