--- a/app/assets/stylesheets/static_pages_controller.scss
+++ b/app/assets/stylesheets/static_pages_controller.scss
@@ -3,5 +3,5 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
   margin: 0;
-  font-family: , Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
 }
