--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -148,6 +148,16 @@ header {
     a:hover {
       color: #2aadad;
     }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      font-size: xx-small;
+    }
   }
 }
 
