--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -4,9 +4,11 @@
 
 .decks-sidebar {
   color: #aaa;
-  background-color: #fff;
+  background-color: #eee;
   font-weight: 300;
-
+  border-right: 1px solid #ddd;
+  overflow-y: scroll;
+  min-width: 355px;
   h1 {
     font-weight: 300;
   }
@@ -32,6 +34,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #fff;
 }
 
 .deck-content {
@@ -57,18 +60,19 @@
 }
 
 .decks-sidebar-header {
+  background-color: #fff;
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-bottom: 1px solid #ddd;
   height: 75px;
+  min-width: 355px;
 }
 
 .deck-create-form {
   height: 100%;
   width: 100%;
   background-color: #fff;
-  border-left: 1px solid #ddd;
   color: #aaa;
   form {
     display: flex;
