--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -126,7 +126,7 @@
       font-size: 24px;
       width: 100%;
       border: none;
-      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
       margin-bottom: 10px;
       height: 50px;
       outline: none;
