--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -159,6 +159,7 @@
   align-items: flex-start;
   padding: 25px 50px;
   box-sizing: border-box;
+  overflow-y: auto;
 
 }
 
@@ -200,6 +201,12 @@
   margin: 30px 0;
 }
 
-.deck-cards {
+.deck-title {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
 
+}
+.deck-title-span {
+  align-self: flex-start;
 }
