--- a/app/assets/stylesheets/api/confs.scss
+++ b/app/assets/stylesheets/api/confs.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the api/confs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.study-show-page {
+  width: 100%;
+  height: 100vh;
+  background-color: #eee;
+  color: #272829;
+  display: flex;
+}
+
+.nav-sidebar {
+  width: 55px;
+  height: 100%;
+  background-color: #272829;
+}
+
+.study-sidebar {
+  width: calc(30vw - 47px);
+  background-color: #393c3e;
+}
