--- a/app/assets/stylesheets/api/confs.scss
+++ b/app/assets/stylesheets/api/confs.scss
@@ -57,6 +57,8 @@
   justify-content: center;
   align-items: center;
   border-bottom: 5px solid #2b9292;
+  font-size: 24px;
+  font-weight: 300;
 }
 
 .front {
@@ -93,7 +95,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  margin: 35px 20px;
 }
 
 .CircularProgressbar {
