--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -141,15 +141,15 @@
     margin: 0 35px;
     color: #fdfdfd;
     border-radius: 5px;
-    border: 1px solid #2aadad;
-    background-color: #2aadad;
+    border: 1px solid #2b9292;
+    background-color: #2b9292;
     transition-duration: 0.2s;
     outline: none;
   }
 
   button:hover {
-    background-color: #2b9292;
-    border: 1px solid #2b9292;
+    background-color: #257777;
+    border: 1px solid #257777;
   }
 }
 
