--- a/app/assets/stylesheets/api/confs.scss
+++ b/app/assets/stylesheets/api/confs.scss
@@ -79,8 +79,14 @@
   color: #fff;
   outline: none;
   border: none;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 300;
+  cursor: pointer;
+}
+
+.study-buttons small {
+  display: block;
+  font-size: 12px;
 }
 
 .study-prompt {
