--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -12,6 +12,48 @@
   width: calc(100vw - 355px);
   height: 100%;
   background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  animation: pulse 1s infinite;
+}
+
+.fa-arrow-left {
+  animation: bounceLeft 2s infinite;
+}
+
+.fa-chevron-left {
+  font-size: 16px;
+}
+
+@keyframes bounceLeft {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -ms-transform: translateX(30px);
+    transform: translateX(30px);
+  }
+  60% {
+    -ms-transform: translateX(15px);
+    transform: translateX(15px);
+  }
+}
+/* /left bounce */
+
+@keyframes pulse {
+  0% {
+    color: rgba(43,146,146,0.5);
+  }
+  100% {
+    color: rgba(43,146,146,1);
+  }
 }
 
 .decks-sidebar {
