--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -145,6 +145,7 @@
     background-color: #2b9292;
     transition-duration: 0.2s;
     outline: none;
+    box-shadow: 0 2px 4px rgba(0,0,0, 0.5);
   }
 
   button:hover {
