--- a/app/assets/stylesheets/api/study-sidebar.scss
+++ b/app/assets/stylesheets/api/study-sidebar.scss
@@ -40,6 +40,7 @@
   border: 1px solid #2b9292;
   outline: none;
   text-align: center;
+  box-shadow: 0 2px 4px rgba(0,0,0, 0.5);
 }
 
 .study-done:hover {
