--- a/app/assets/stylesheets/api/cards.scss
+++ b/app/assets/stylesheets/api/cards.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 10px;
+    padding: 15px;
     border-bottom: 1px solid #ddd;
     color: #333;
 
@@ -24,9 +24,11 @@
     }
     span:first-child {
       margin-right: 65px;
+      margin-top: 10px;
     }
     span:last-child {
       margin-right: 0;
+      margin-top: 0;
     }
   }
 
