--- a/app/assets/stylesheets/api/decks.scss
+++ b/app/assets/stylesheets/api/decks.scss
@@ -145,6 +145,7 @@
 
 .decks-body {
   overflow-y: scroll;
+  overflow-x: hidden;
   height: calc(100vh - 135px);
 }
 
@@ -228,6 +229,7 @@
   padding: 25px 50px;
   box-sizing: border-box;
   overflow-y: auto;
+  overflow-x: hidden;
 
 }
 
