--- a/app/assets/stylesheets/api/study-sidebar.scss
+++ b/app/assets/stylesheets/api/study-sidebar.scss
@@ -16,6 +16,10 @@
   margin-top: 7vh;
 }
 
+.nav-sidebar button:hover {
+  color: #27b574;
+}
+
 .nav-sidebar button:first-child {
   margin-top: 2vh;
 }
