--- a/app/assets/stylesheets/api/cards.scss
+++ b/app/assets/stylesheets/api/cards.scss
@@ -32,17 +32,17 @@
     }
   }
 
-  textarea {
+  Textarea {
     font-size: 16px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 8px;
+    padding: 11px 13px;
     color: #666;
     width: 38%;
     border-radius: 5px;
     border: 1px solid #ddd;
     outline: none;
     line-height: 1.4;
+    resize: none;
+    overflow: hidden;
   }
 
 }
