--- a/app/assets/stylesheets/api/decks_search.scss
+++ b/app/assets/stylesheets/api/decks_search.scss
@@ -98,6 +98,11 @@
 
 }
 
+.search-deck-item:hover {
+  background-color: #eee;
+  cursor: pointer;
+}
+
 .search-deck-info {
   display: flex;
   flex-direction: column;
