Add general css

--- a/app/assets/stylesheets/api/cards.scss
+++ b/app/assets/stylesheets/api/cards.scss
@@ -23,7 +23,7 @@
       outline: none;
     }
     span:first-child {
-      margin-right: 65px;
+      margin-right: 3vw;
       margin-top: 10px;
     }
     span:last-child {
