--- a/app/assets/stylesheets/api/cards.scss
+++ b/app/assets/stylesheets/api/cards.scss
@@ -78,18 +78,22 @@
   border-bottom: 2px solid #ddd;
 }
 
-.toast {
+.deck-toast {
+  font-size: 17px;
+}
+
+.toast, .deck-toast {
   color: #fff;
   position: fixed;
-  top: 200px;
-  right: 50px;
+  top: 70px;
+  left: 50%;
   list-style: none;
-  background-color: #3f8fcd;
+  background-color: rgba(206, 73, 62, 0.9);
   padding: 20px 35px;
   border-radius: 5px;
 }
 
-.toast.show {
+.toast.show, .deck-toast.show {
   visibility: visible;
   /* Show the snackbar */
   /* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
